# doc2md-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
doc2md/: __init__.py  cli.py
