[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["doc2md"]

[project]
name = "doc-to-md-cli"
version = "0.1.2"
description = "Convert DOCX files to Markdown using Playwright"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
  "playwright",
]
keywords = ["docx", "markdown", "converter", "cli", "word"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Markup",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/ebinesh25/doc2md-cli"
Repository = "https://github.com/ebinesh25/doc2md-cli"
Issues = "https://github.com/ebinesh25/doc2md-cli/issues"

[project.scripts]
doc-to-md = "doc2md.cli:main"
